Fixed popups using dark mode colours.

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/panel/_panelUI-shared.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/panel/_panelUI-shared.scss
@@ -3,7 +3,7 @@
 	--panel-separator-color: rgb(233,233,233);
 	--panel-item-background-hot: rgb(227,237,246);
 
-	@media (prefers-color-scheme) {
+	@media (prefers-color-scheme: dark) {
 		--panel-header-color: rgb(72, 129, 236);
 		--panel-separator-color: rgba(255, 255, 255, .5);
 		--panel-item-background-hot: rgba(59, 144, 219, 0.3);
