--- a/Profile Folder/chrome/styles/partials/chrome/chrome-47/panel/_panelUI-shared.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-47/panel/_panelUI-shared.scss
@@ -3,7 +3,7 @@
 	--panel-item-background-hot: rgb(234,234,234);
 	--panel-item-color-hot: rgb(6,45,117);
 
-	@media (prefers-color-scheme) {
+	@media (prefers-color-scheme: dark) {
 		--panel-header-color: white;
 		--panel-item-background-hot: rgb(255, 255, 255, .15);
 		--panel-item-color-hot: rgb(72, 129, 236);
